# journal-backend

./: Cargo.toml  README.md  dbBuild.sql
app/: Cargo.toml
app/src/: helpers.rs  lib.rs  main.rs  middleware.rs  models.rs
app/src/controllers/: auth_controller.rs  entry_controller.rs  mod.rs
app/src/entities/: entry.rs  mod.rs  prelude.rs  user.rs
app/src/models/: auth.rs  entry.rs  errors.rs  mod.rs  user.rs
app/src/services/: auth_service.rs  entry_service.rs  mod.rs
