[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["headers"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.25.0", features = ["full"] }
dotenvy = "0.15.6"
jsonwebtoken = "8.2.0"
once_cell = "1.17.0"
tower-http = { version = "0.3.0", features = ["cors"] }